@@ -8,6 +8,7 @@ import javassist.util.proxy.ProxyObject;
 import javassist.util.proxy.Proxy;
 import junit.framework.TestCase;
 
+@SuppressWarnings({"rawtypes","unchecked"})
 public class JBPAPP9257Test extends TestCase {
     public void testGetHandler() throws Exception {
         ProxyFactory f = new ProxyFactory();
@@ -27,7 +28,7 @@ public class JBPAPP9257Test extends TestCase {
                 // method.
             }
         };
-        Foo foo = (Foo)c.newInstance();
+        Foo foo = (Foo)c.getConstructor().newInstance();
         try {
             ((ProxyObject)foo).setHandler(mi);
             fail("foo is a ProxyObject!");
@@ -55,7 +56,7 @@ public class JBPAPP9257Test extends TestCase {
                 // method.
             }
         };
-        Foo2 foo = (Foo2)c.newInstance();
+        Foo2 foo = (Foo2)c.getConstructor().newInstance();
         try {
             ((ProxyObject)foo).setHandler(mi);
             fail("foo is a ProxyObject!");
